--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+<body>
+
+<img src="under_construction.jpg" alt="Under construction" style="width:304px;height:228px;">
+
+</body>
+</html>
