--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<img src="under_construction.jpg" alt="Under construction" style="width:304px;height:228px;">
+<img src="img/under_construction.jpg" alt="Under construction" style="width:304px;height:228px;">
 
 </body>
 </html>
